fixed checklist on mobile

--- a/Appetizer/style.css
+++ b/Appetizer/style.css
@@ -683,7 +683,7 @@ body > a img {
 
 .check-label{
   display: grid;
-  grid-template-columns: auto 1fr;
+  grid-template-columns: max-content max-content;
   align-items: center;
   gap: 0.5rem;
 }
@@ -926,6 +926,10 @@ body > a img {
 }
 
 @media (max-width: 768px) {
+  .check-label{
+    grid-template-columns: max-content 1fr;
+  }
+
   .hidden-box:checked + .check-label .check-text {
     color: var(--blue-200);
     background-size: 0;
